# EMAworkbench

./: .coverage.TUD501192.2165.767177  .coverage.TUD501192.8913.995292  .coveragerc  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  MANIFEST  MANIFEST.in  README.md  README.txt  TODO.txt  changelog.txt  ideas.txt  known bugs.txt  pyproject.toml  requirements.txt  setup.py  todo.md
.github/: release.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  examples.yml  pre-commit-update.yml  python-package.yml  release.yml
Bugs/: known bugs.txt
Bugs/Bug 1 in PRIM/: Cesun_Prim.py
Bugs/Bug 2 in PRIM/: Cesun_Prim.py  EnergyTransExample_withnewmonitors.py
conda/: build.sh  conda_build_config.yaml  meta.yaml
docs/: Makefile  make.bat  make_examples_rst.py  make_gallery.py  requirements.txt
docs/source/: api_index.rst  basic_tutorial.rst  best_practices.rst  changelog.md  conf.py  contents.rst  download.rst  example_template.txt  examples.rst  examples_template.txt  index.rst  installation.rst  migration_guide.md  overview.rst  tutorial.rst  vensim-tips-and-tricks.rst
docs/sphinxext/: plot_directive.py
ema_workbench/: __init__.py  requirements.txt
ema_workbench/analysis/: __init__.py  b_and_w_plotting.py  cart.py  clusterer.py  dimensional_stacking.py  feature_scoring.py  logistic_regression.py  pairs_plotting.py  parcoords.py  plotting.py  plotting_util.py  prim.py  prim_pca.py  prim_util.py  regional_sa.py  scenario_discovery_util.py
ema_workbench/connectors/: __init__.py  excel.py  netlogo.py  pyNetLogo.py  pysd_connector.py  pysd_interface.py  simio_connector.py  vadere.py  vensim.py  vensimDLLwrapper.py  vensim_dll_wrapper.py
ema_workbench/core/: __init__.py  callbacks.py  ema_optimization.py  ema_optimization_util.py  ema_parallel_ipython.py  ema_parallel_multiprocessing.py  experiment_runner.py  model_ensemble.py  pool.py  samplers.py
ema_workbench/em_framework/: __init__.py  callbacks.py  cases.py  ema_distributed.py  ema_ipyparallel.py  ema_mpi.py  ema_multiprocessing.py  ema_optimization.py  ema_optimization_util.py  ema_parallel_ipython.py  ema_parallel_multiprocessing.py  evaluators.py  experiment_runner.py  futures_ipyparallel.py  futures_mpi.py  futures_multiprocessing.py  futures_util.py  model.py  model_ensemble.py  optimization.py  optimization_convergence.py  outcomes.py  output_space_exploration.py  outputspace_exploration.py  parameters.py  points.py  salib_samplers.py  samplers.py  uncertainties.py  util.py
ema_workbench/examples/: __init__.py  basic_plotting_example.py  boostedtrees_flu_example.py  cart_flu_example.py  cart_wcm_example.py  eijgenraam_example.py  example_eijgenraam.py  example_excel.py  example_flu.py  example_lake_model.py  example_mesa.py  example_mpi_lake_model.py  example_netlogo.py  example_pysd_teacup.py  example_python.py  example_simio.py  example_vensim.py  example_vensim_advanced_flu.py  example_vensim_energy.py  example_vensim_flu.py  example_vensim_lookup.py  example_vensim_no_policy_flu.py  example_vensim_scarcity.py  excel_example.py  feature_scoring_flu.py  feature_scoring_flu_confidence.py  feature_scoring_flu_example.py  feature_scoring_flu_overtime.py  flu_dimensional_stacking.py  flu_example.py  flu_pairsplot.py  flu_timeseries_clustering.py  flu_vensim_example.py  flu_vensim_example_advanced.py  flu_vensim_no_policy_example.py  lake_model.py  lake_model_dps.py  lake_model_dps_robust.py  lake_model_intertemporal.py  lake_model_multi.py  (+57 more)
ema_workbench/test/: python_example.py  scarcity_example.py  test_utilities.py  transform_data.py  vensim_flu_for_testing.py
ema_workbench/util/: __init__.py  ema_exceptions.py  ema_logging.py  expworkbench.cfg  util.py  utilities.py
examples/: basic_plotting_example.py  blog_post.ipynb  cart_flu_example.py  clustering_example.py  excel_example.py  flu_example.py  flu_pairsplot.py  flu_vensim_example.py  flu_vensim_no_policy_example.py  lake_model.py  lookup_example.py  model_debugger.py  netlogo_example.py  netlogo_example2.py  prim_flu_example.py  prim_wcm_example.py  python_example.py  scarcity_example.py  test_examples.py  vensim_example.py
examples/.ipynb_checkpoints/: blog_post-checkpoint.ipynb
examples/data/: bryant et al 2010 data.csv
models/: predatorPreyNetlogotemp.csv
models/EnergyTrans/: CESUN_optimized_new.vpm  ESDMAElecTrans_econ.vpm
models/excelModel/: excel example.xlsx
models/flu/: Current.vdf  FLUvensimV1dynamic.vpm  mdl.c
models/salinization/: Current.vdf  Group8Policy1b.vpm  Group8Policy6.vpm  Policy 5.mdl  Policy 8.vpm  Verzilting_aanpassingen correct.mdl  Verzilting_aanpassingen incorrect.mdl  Verzilting_aanpassingen.mdl  Verzilting_aanpassingen_verstuurd.2mdl  Verzilting_aanpassingen_verstuurd.mdl  Verzilting_aanpassingen_verstuurd.vpm  verzilting 2.2mdl  verzilting 2.mdl  verzilting 2.vpm  verzilting with desertification.2mdl  verzilting with desertification.mdl  verzilting with desertificatoin.2mdl  verzilting.mdl  verzilting.vpm
models/test/: test
models/vensim example/: model.mdl
scripts/: DelftBlue commands netlogo.txt  DelftBlue commands.txt  WSL commands.txt  ema_model.py  ema_test_script.sh  launcher.py  my_model.py  netlogo.py  test_script.sh
src/: requirements.txt  setup.py
src/analysis/: 100 flu cases.cPickle  __init__.py  b_and_w_plotting.py  cart.py  clusterer.py  feature_scoring.py  feature_selection.py  graphs.py  graphs3d.py  interactive_graphs.py  new_prim.py  old_prim.py  optimization_plots.py  orangeFunctions.py  orange_functions.py  pairs_plotting.py  pca_prim.py  plotting.py  plotting_util.py  prim ideas  prim.py  regional_sa.py  scenario_discovery.py  scenario_discovery_util.py
src/connectors/: __init__.py  excel.py  netlogo.py  pyNetLogo.py  vensim.py  vensimDLLwrapper.py
src/ema_workbench/: __init__.py
src/examples/: FLUvensimExample.py  (+41 more)
test/: python_example.py  scarcity_example.py  test_utilities.py  utilities.py  vensim_flu_for_testing.py
util/: utilities.py
(+810 files in other folders)
